# javascript-multiplayer-boilerplate

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
backup/src/: App.ts  README.md
backup/src/modules/: axis.ts  covertCoordinates.ts  createRoom.ts  drawLine.ts  screenPoint.ts
backup/src/types/: socket-client-types.ts
backup/test/: outlineMat.html
client-react/: index.html  package-lock.json  package.json  tsconfig.json
client-react/public/models/: ybot.fbx
client-react/public/sample-codes/: dracoLoader.tsx
client-react/public/styles/: index.css
client-react/src/: App.tsx  main.tsx
client-react/src/pages/: Home.tsx  (+1 more)
client-svelte/: package-lock.json  package.json
client-ts/: index.html  package-lock.json  package.json  tsconfig.json
client-ts/src/: Engine.ts  index.ts
client-vanilla/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
client-vanilla/src/: App.ts  Engine.ts  VCRuntime.ts  index.ts
public/models/: CharacterWithAnims.jsx
server-geckos/: package-lock.json  package.json
server-geckos/src/: server.ts
server-rs/: Cargo.toml
server-rs/src/: main.rs  routes.rs  server.rs  session.rs
server-rs/src/routes/: auth.rs  index.rs
server-rs/static/: index.html
server-socket/: .env  package-lock.json  package.json  tsconfig.json
server-socket/src/: server.ts
server-udp/: package-lock.json  package.json  tsconfig.json
server-udp-express/: package-lock.json  package.json  serverless.yml
server-udp-express/src/: server.ts
server-udp/src/: server.mjs  server.ts
src/: App.tsx
(+102 files in other folders)
