[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.13.0"
actix-web = "^4"
actix-files = "^0.6.2"
actix-web-actors = "^4"
log = "0.4.17"
rand = "0.8.5"
serde = "^1"
serde_json = "^1"
env_logger = "^0.10.0"
actix-cors = "0.6.4"
